<resources>
    <string name="app_name">Shuttle Notepad</string>
    <string name="app_version">Version : 0.52(Early Access)</string>
    <string name="app_details">About</string>
    <string name="app_settings">Settings</string>
    <string name="copyright">&#169; GhostServer STUDIO All Rights Reserved.</string>
    <string name="portal_site">Portal</string>
    <string name="feedback">Send Feedback</string>
    <string name="delete_title">Delete</string>
    <string name="edit_title">Edit</string>
    <string name="icon_title">Change icon</string>
    <string name="bgc_title">Background colors</string>
    <string name="choose_icon">Icons</string>
    <string name="setting_title">Settings</string>
    <string name="choose_delete">Delete collectively</string>
    <string name="title_activity_settings">Settings</string>
    <string name="osl">Open source license</string>
    <string name="toast_delete">This memo has already been deleted.</string>
    <string name="close">Close</string>
    <string name="delete_question">Do you erase this memo?</string>
    <string name="leave_question">Do you want to save this memo?</string>
    <string name="cancel">Cancel</string>
    <string name="disable">Disable</string>
    <string name="notify_disable">Do you stop receiving notifications?</string>
    <string name="tmp_title">Title template</string>
    <string name="enable_enhance">Enable enhanced list</string>
    <string name="enhance_summary">Show icons &amp; summary</string>
    <string name="not_title">Title when title is not set</string>
    <string name="not_title_summary">Change the title set automatically</string>
    <string name="title_tmp_summary">Change the title set automatically</string>
    <string name="memo_tmp">Memo template</string>
    <string name="memo_tmp_summary">Set sentence to be automatically inserted in memo.</string>
    <string name="setting_memo_title">Memo settings</string>
    <string name="setting_list_title">List settings</string>
    <string name="empty_memo">Let\'s make memos!</string>
    <string name="title">Title</string>
    <string name="memo">Memo</string>
    <string name="move_s">Behavior setting</string>
    <string name="backKey_settings_title">Integrate save button</string>
    <string name="backKey_settings_summary">Integrate the Save button to the back key.</string>
    <string name="viewer_settings_title">Use browsing screen</string>
    <string name="viewer_settings_summary">Display the browsing screen before going to the editing screen.</string>
    <string name="kepp_save">Save and continue editing</string>
    <string name="edit_cancel">Discard and exit</string>
    <string name="cancel_edit">Cancel creating/editing memo</string>
    <string name="Notify">Notification</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="DB_failed">Add to database failed: title is duplicated with other memo.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cd">Date created (UTC) : </string>
    <string name="icon_change">Change icon</string>
    <string name="etc">...etc\n</string>
    <string name="error_d">There are no items to delete.</string>
    <string name="select_erase">Erase selected notes</string>
</resources>